[tool.poetry]
name = "lost-text-cat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "APACHE LICENSE, VERSION 2.0"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.19.2"
datasets = "^2.2.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
